--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,14 +1,35 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+@theme {
+  --drop-shadow-glow:
+    0 0px 20px rgba(255, 255, 255, 0.35), 0 0px 65px rgba(255, 255, 255, 0.2);
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
+
+@utility cool-text-gradient {
+  @apply text-transparent bg-clip-text bg-linear-to-tl from-stone-200 via-orange-500 to-orange-200;
 }
 
 @layer utilities {
-  .cool-text-gradient {
-    @apply text-transparent bg-clip-text bg-gradient-to-tl from-stone-200 via-orange-500 to-orange-200;
+  :root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   }
 }
 
